--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>       
+        <meta charset="utf-8">
+        <title>Homepage</title>
+    </head>
+
+        <body>
+            <h1> Odin's Recipes</h1>
+            <a href="./recipes/lasagna.html">Lasagna Recipe</a>
 
 
 
-
+        </body>
 
 
 
