--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,31 @@
     </head>
     <body>
         <h1>Lasagna Recipe</h1>
+        <img src="./lasgna.jpeg" alt="Photo of Lasgna">
+        <h3> About this recipe:</h3>
+        <p> This classic lasagna recipe is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family and freezes well, too.</p>
+        <h3> Ingredients:</h3>
+        <ul>
+            <il>2 teaspoons extra virgin olive oil.</il>
+            <il>1 pound ground beef chuck</il>
+            <il>1/2 medium onion, diced (about 3/4 cup)</il>
+            <il>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</il>
+            <il>2 cloves garlic, minced</il>
+            <il>1 (28-ounce)can good-quality tomato sauce</il>
+            <il>3 ounces tomato paste (half a 6-ounce can)</il>
+            <il>1 (14 ounce) can crushed tomatoes</il>
+            <il>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</il>
+        </ul>
+        <h3> Steps: </h3>
+        <ol>
+            <il>Put a large pot of salted water (1 Tbsp salt for every 2 quarts of water) on the stovetop on high heat. It can take a while for a large pot of water to come to a boil (this will be your pasta water), so prepare the sauce in the next steps while the water is heating.</il>
+            <il>In a large skillet heat 2 teaspoons of olive oil on medium high heat. Add the ground beef and cook until it is lightly browned on all sides.</il>
+            <il>Add the diced bell pepper and onions to skillet (in the photo we are using yellow bell pepper and red onions).</il>
+            <il>Cook for 4 to 5 minutes, until the onions are translucent and the peppers softened. Add the minced garlic and cook half a minute more.</il>
+            <il>Transfer the beef mixture to a medium sized (3- to 4-quart) pot. Add the crushed tomatoes, tomato sauce, and tomato paste to the pot.</il>
+            <il>Bring the sauce to a simmer and then lower the heat to maintain a low simmer. Cook for 15 to 45 minutes, stirring often. Scrape the bottom of the pot every so often so nothing sticks to the bottom and scorches.</il>
+
+        </ol>
     </body>
 
 
