--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 
         <body>
             <h1> Odin's Recipes</h1>
-            <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+            <ul>
+                <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+               <li><dt><a href="./recipes/lasagna.html">Burger Recipe</a></dt></li>
+                <dd>This recipe is in the works, come back later!</dd>
 
+            </ul>
 
 
         </body>
